--- a/index.html
+++ b/index.html
@@ -152,20 +152,110 @@
                             <div class="about-team-text">
                                 <h3 class="about-team-name">Ольга Рєпіна</h3>
                                 <p class="about-team-item">Frontend Developer</p>
+                                <ul class="social-list list">
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="about-team-items list">
                             <img src="./images/img-1(3).jpg" width="270" alt="команда">
                             <div class="about-team-text">
                                 <h3 class="about-team-name">Микола Тарасов</h3>
-                                <p class="about-team-item">Marketing</p>                                
+                                <p class="about-team-item">Marketing</p>  
+                                <ul class="social-list list">
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>                              
                             </div>
                         </li>
                         <li class="about-team-items list">
                             <img src="./images/img-1(4).jpg" width="270" alt="команда">
                             <div class="about-team-text">
                                 <h3 class="about-team-name">Михайло Єрмаков</h3>
-                                <p class="about-team-item">UI Designer</p>                                
+                                <p class="about-team-item">UI Designer</p> 
+                                <ul class="social-list list">
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-list-item">
+                                        <a class="social-list-link" href="">
+                                            <svg class="social-list-icon" width="20" height="20">
+                                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>                               
                             </div>
                         </li>
                     </ul>
