--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
                 </nav>
                 <ul class="contacts-list list">
                     <li class="contact-list-item">
-                        <svg class="contact-item" width="20" height="20">
-                            <use href="./images/sprite.svg#icon-mail"></use>
-                        </svg>
-                        <a class="contact-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="contact-mail link" href="mailto:info@devstudio.com">
+                            <svg class="contact-item" width="16" height="12">
+                                <use href="./images/sprite.svg#icon-mail"></use>
+                            </svg>
+                        info@devstudio.com</a>
                     </li>
                     <li class="contact-list-item">
-                        <svg class="contact-item" width="20" height="20">
-                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        <a class="contact-phone link" href="tel:+380961111111">
+                            <svg class="contact-item" width="10" height="16">
+                                <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
-                        <a class="contact-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+                            +38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
@@ -321,8 +323,8 @@
                 </address>
             </div>
             <div class="footer-links-container">
-                <p>приєднуйтесь</p>
-                <ul class="social-list list">
+                <h4 class="footer-links-title">ПРИЄДНУЙТЕСЬ</h4>
+                <ul class="list-links-item list">
                     <li class="social-list-item">
                         <a class="social-list-link" href="">
                             <svg class="social-list-icon" width="20" height="20">
