--- a/index.html
+++ b/index.html
@@ -321,40 +321,41 @@
                     <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>                
                 </address>
+                <div class="footer-links-container">
+                    <h4 class="footer-links-title">ПРИЄДНУЙТЕСЬ</h4>
+                    <ul class="social-list list">
+                        <li class="social-list-item">
+                            <a class="social-list-link" href="">
+                                <svg class="social-list-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a class="social-list-link" href="">
+                                <svg class="social-list-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a class="social-list-link" href="">
+                                <svg class="social-list-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a class="social-list-link" href="">
+                                <svg class="social-list-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-links-container">
-                <h4 class="footer-links-title">ПРИЄДНУЙТЕСЬ</h4>
-                <ul class="list-links-item list">
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-list-item">
-                        <a class="social-list-link" href="">
-                            <svg class="social-list-icon" width="20" height="20">
-                                <use href="./images/sprite.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
         </footer>
     </body>
 </html>
