--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="contact-list-item">
                         <a class="contact-mail link" href="mailto:info@devstudio.com">
                             <svg class="contact-item" width="16" height="12">
-                                <use href="./images/sprite.svg#icon-mail"></use>
+                                <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
                         info@devstudio.com</a>
                     </li>
@@ -270,21 +270,14 @@
                             <li class="clients">
                                 <div class="clients-wrapper">
                                     <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo"></use>
+                                        <use href="./images/sprite.svg#icon-logo-1"></use>
                                     </svg>
                                 </div>
                             </li>
                             <li class="clients">
                                 <div class="clients-wrapper">
                                     <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo-1"></use>
-                                    </svg>
-                                </div>
-                            </li>
-                            <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo-2"></use>
+                                        <use href="./images/sprite.svg#icon-logo-2"></use>
                                     </svg>
                                 </div>
                             </li>
@@ -305,7 +298,14 @@
                             <li class="clients">
                                 <div class="clients-wrapper">
                                     <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo-5"></use>
+                                        <use href="./images/sprite.svg#icon-logo-5"></use>
+                                    </svg>
+                                </div>
+                            </li>
+                            <li class="clients">
+                                <div class="clients-wrapper">
+                                    <svg class="clients-logo" width="170" height="92">
+                                        <use href="./images/sprite.svg#icon-logo-6"></use>
                                     </svg>
                                 </div>
                             </li>
