--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                             <svg class="contact-item" width="16" height="12">
                                 <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
-                        info@devstudio.com</a>
+                        info@devstudio.com
+                    </a>
                     </li>
                     <li class="contact-list-item">
                         <a class="contact-phone link" href="tel:+380961111111">
