--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <ul class="feature-list">
                         <li class="feature-list-items list">
                             <div class="feature-wrapper">
-                                <svg class="feature-image"  width="70" height="70">
+                                <svg class="feature-images"  width="70" height="70">
                                     <use href="./images/sprite.svg#icon-antenna"></use>
                                 </svg>
                             </div>                            
@@ -69,7 +69,7 @@
                         </li>
                         <li class="feature-list-items list">
                             <div class="feature-wrapper">
-                                <svg class="feature-image"  width="70" height="70">
+                                <svg class="feature-images"  width="70" height="70">
                                     <use href="./images/sprite.svg#icon-clock"></use>
                                 </svg>
                             </div>  
@@ -78,7 +78,7 @@
                         </li>
                         <li class="feature-list-items list">
                             <div class="feature-wrapper">
-                                <svg class="feature-image"  width="70" height="70">
+                                <svg class="feature-images"  width="70" height="70">
                                     <use href="./images/sprite.svg#icon-diagram"></use>
                                 </svg>
                             </div>  
@@ -87,7 +87,7 @@
                         </li>
                         <li class="feature-list-items list">
                             <div class="feature-wrapper">
-                                <svg class="feature-image"  width="70" height="70">
+                                <svg class="feature-images"  width="70" height="70">
                                     <use href="./images/sprite.svg#icon-astronaut"></use>
                                 </svg>
                             </div>  
@@ -147,7 +147,6 @@
                                         </a>
                                     </li>
                                 </ul>
-
                             </div>
                         </li>
                         <li class="about-team-items list">
@@ -269,46 +268,46 @@
                     <h2 class="subtitle">Постійні клієнти</h2>
                     <ul class="about-clients list">
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-1"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-2"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo-3"></use>
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
+                                        <use href="./images/sprite.svg#icon-logo-3"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
-                                        <use href="./images/sprite.svg#icon-Logo-4"></use>
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
+                                        <use href="./images/sprite.svg#icon-logo-4"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-5"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                             <li class="clients">
-                                <div class="clients-wrapper">
-                                    <svg class="clients-logo" width="170" height="92">
+                                <a class="clients-wrapper">
+                                    <svg class="clients-logo" width="106" height="60">
                                         <use href="./images/sprite.svg#icon-logo-6"></use>
                                     </svg>
-                                </div>
+                                </a>
                             </li>
                     </ul>
                 </div>
@@ -322,41 +321,40 @@
                     <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>                
                 </address>
-                <div class="footer-links-container">
-                    <h4 class="footer-links-title">ПРИЄДНУЙТЕСЬ</h4>
-                    <ul class="social-list list">
-                        <li class="social-list-item">
-                            <a class="social-list-link" href="">
-                                <svg class="social-list-icon" width="20" height="20">
-                                    <use href="./images/sprite.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link" href="">
-                                <svg class="social-list-icon" width="20" height="20">
-                                    <use href="./images/sprite.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link" href="">
-                                <svg class="social-list-icon" width="20" height="20">
-                                    <use href="./images/sprite.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link" href="">
-                                <svg class="social-list-icon" width="20" height="20">
-                                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
             </div>
-
+            <div class="footer-links-container">
+                <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link" href="">
+                            <svg class="social-list-icon" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
     </body>
 </html>
