--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                 </ul> 
                 <ul class="project-items-list">
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(1).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Технокряк</h3>
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(2).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Постер New Orlean vs Golden Star</h3 class="project-item">
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(3).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Ресторан Seafood</h3 class="project-item">
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(4).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт Prime</h3 class="project-item">
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(5).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт Boxes</h3 class="project-item">
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(6).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Inspiration has no Borders</h3 class="project-item">
@@ -111,7 +111,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(7).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Видання Limited Edition</h3 class="project-item">
@@ -120,7 +120,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(8).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Проєкт LAB</h3 class="project-item">
@@ -129,7 +129,7 @@
                         </a>
                     </li>
                     <li class="project-list-items list">
-                        <a class="link" href="">
+                        <a class="project-list link" href="">
                             <img src="./images/img-2(9).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Growing Business</h3>
