--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <svg class="contact-item" width="16" height="12">
                                 <use href="./images/sprite.svg#icon-envelope"></use>
                             </svg>
-                        info@devstudio.com
+                            <p>info@devstudio.com</p>
                     </a>
                     </li>
                     <li class="contact-list-item">
@@ -42,7 +42,8 @@
                             <svg class="contact-item" width="10" height="16">
                                 <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
-                            +38 096 111 11 11</a>
+                            <p>+38 096 111 11 11</p>
+                        </a>
                     </li>
                 </ul>
             </div>
