--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                         <a class="nav-list-link link" href="index.html">Студія</a>
                     </li>
                     <li class="nav-list-item">
-                        <a  class="nav-list-link link" href="#"><span class="accent">Портфоліо</span></a>
+                        <a  class="nav-list-link nav-list-link-hover link" href="#"><span class="accent">Портфоліо</span></a>
                     </li>
                     <li class="nav-list-item">
                         <a  class="nav-list-link link" href="#">Контакти</a>
@@ -68,6 +68,8 @@
                                 <p class="project-list-item">Веб-сайт</p>
                             </div>
                         </a>
+                        <span class="project-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу.</span>
                     </li>
                     <li class="project-list-items list">
                         <a class="project-list link" href="">
@@ -155,7 +157,7 @@
                         <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </address>
                     <div class="footer-links-container">
-                        <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
+                        <strong class="footer-links-title">Приєднуйтесь</strong>
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a class="social-list-link" href="">
