--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <nav class="navigation">
                     <ul class="nav-list list">
                         <li class="nav-list-item">
-                            <a class="nav-list-link link" href="#"><span class="accent">Студія</span></a>
+                            <a class="nav-list-link nav-list-link-hover link" href="#"><span class="accent">Студія</span></a>
                         </li>
                         <li class="nav-list-item">
                             <a class="nav-list-link link" href="portfolio.html">Портфоліо</a>
@@ -52,7 +52,7 @@
             <section class="hero">
                 <div class="container hero-container">
                     <h1 class="main-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-                    <button class="modal-button" type="button">Замовити послугу</button>
+                    <button class="modal-button" type="button" data-modal-open>Замовити послугу</button>
                 </div>
             </section>              
             <!--Feature--> 
@@ -102,9 +102,18 @@
                 <div class="container">
                     <h2 class="subtitle">Чим ми займаємося</h2>
                     <ul class="feature-list-photos">
-                        <li class="feature-list-photo list"><img src="./images/img_001.jpg" alt="робочі інструменти"></li>
-                        <li class="feature-list-photo list"><img src="./images/img_002.jpg" alt="робочі інструменти"></li>
-                        <li class="feature-list-photo list"><img src="./images/img_003.jpg" alt="робочі інструменти"></li>
+                        <li class="feature-list-photo list">
+                            <img src="./images/img_001.jpg" alt="робочі інструменти">
+                            <strong class="feature-list-text">Десктопні додатки</strong>
+                        </li>
+                        <li class="feature-list-photo list">
+                            <img src="./images/img_002.jpg" alt="робочі інструменти">
+                            <strong class="feature-list-text">Мобільні додатки</strong>
+                        </li>
+                        <li class="feature-list-photo list">
+                            <img src="./images/img_003.jpg" alt="робочі інструменти">
+                            <strong class="feature-list-text">Дизайнерські рішення</strong>
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -324,7 +333,7 @@
                         <a class="contacts link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </address>
                 <div class="footer-links-container">
-                        <strong class="footer-links-title">ПРИЄДНУЙТЕСЬ</strong>
+                        <strong class="footer-links-title">Приєднуйтесь</strong>
                         <ul class="social-list list">
                             <li class="social-list-item">
                                 <a class="social-list-link" href="">
@@ -359,5 +368,18 @@
                 </div>
             </div>
         </footer>
+        
+            <!-- Modal button -->
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button type="button" class="modal-close-btn" data-modal-close>
+                    <svg class="modal-close-icon" wight="18" height="18">
+                        <use href="./images/sprite.svg#close-icon"></use>
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <script src="./js/modal.js"></script>
     </body>
 </html>
