--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
                     <li class="projects-filter list"><button  class="project-filter-button" type="button">Маркетинг</button></li>
                 </ul> 
                 <ul class="project-items-list">
-                    <li class="project-list-items project-overlay list">
-                        <a class="project-list link" href="">
+                    <li class="project-list-items list">
+                        <a class="project-list  project-overlay link" href="">
                             <img src="./images/img-2(1).png" width="370" alt="фото проекту">
                             <div class="project-list-text">
                                 <h3 class="project-item">Технокряк</h3>
