--- a/portfolio.html
+++ b/portfolio.html
@@ -62,10 +62,10 @@
                 </button>
                 <ul class="mobile-menu__navigation">
                     <li class="mobile-menu__nav-list list">
-                        <a class="mobile-menu__nav-item mobile-menu__nav-item--accent link" href="#">Студія</a>
+                        <a class="mobile-menu__nav-item link" href="./index.html">Студія</a>
                     </li>
                     <li class="mobile-menu__nav-list list">
-                        <a class="mobile-menu__nav-item link" href="portfolio.html">Портфоліо</a>
+                        <a class="mobile-menu__nav-item mobile-menu__nav-item--accent link" href="#">Портфоліо</a>
                     </li>
                     <li class="mobile-menu__nav-list list">
                         <a class="mobile-menu__nav-item link" href="#address">Контакти</a>
